# RAG

./: .env.example  .gitignore  .zshrc  IMPLEMENTATION_GUIDE.md  Makefile  QUICKSTART.md  README.md  app.py  pyproject.toml
.github/workflows/: ci.yml
data/benchmarks/: test.json
infra/docker/: Dockerfile.api  docker-compose.yml
infra/k8s/: deployment.yaml  namespace.yaml  service.yaml
notebooks/: 01_ingestion.ipynb  02_agents.ipynb  03_evaluation.ipynb
reports/traces/: traces.jsonl
scripts/: create_benchmark.py  run_ingest.py
src/: __init__.py
src/agents/: __init__.py  compliance_agent.py  critic_agent.py  formatter_agent.py  graph.py  retriever_agent.py  router.py  state.py
src/api/: dependencies.py  main.py  middleware.py
src/db/: __init__.py  chroma_client.py  neo4j_client.py  schema.py
src/evaluation/: __init__.py  ab_testing.py  benchmark.py  llm_judge.py  metrics.py  report_generator.py
src/generation/: __init__.py  citation_formatter.py  context_compressor.py  response_builder.py
src/ingestion/: __init__.py  chunker.py  entity_extractor.py  parser.py  pipeline.py
src/monitoring/: __init__.py  logger_config.py  prometheus_metrics.py  tracer.py
src/retrieval/: __init__.py  embeddings.py  hybrid_search.py  query_transform.py  reranker.py  sparse_index.py  vector_store.py
src/utils/: __init__.py  cache.py  config.py  exceptions.py  logger.py  model_manager.py
tests/e2e/: test_pipeline_e2e.py
tests/integration/: test_api.py
tests/unit/: test_bm25.py  test_chunker.py  test_compliance.py  test_formatter.py  test_metrics.py  (+3 more)
(+6 files in other folders)
